profile, địa chỉ người dùng ở thanh-toan.html, ban-hang.html, banner index

--- a/src/main/resources/templates/WebKhachHang/index.html
+++ b/src/main/resources/templates/WebKhachHang/index.html
@@ -258,9 +258,15 @@
 <div class="container mx-auto py-8">
   <div class="swiper banner-slider">
     <div class="swiper-wrapper">
-      <div class="swiper-slide"><img loading="lazy" src="https://file.hstatic.net/200000503583/collection/ao-nam-2022_71fff4523ebe4fbd9722928187580776.jpg" alt="Banner thời trang nam" class="w-full h-full object-cover"/></div>
-      <div class="swiper-slide"><img loading="lazy" src="https://file.hstatic.net/1000253775/file/kt_dn_dk.jpg" alt="Banner khuyến mãi" class="w-full h-full object-cover"/></div>
-      <div class="swiper-slide"><img loading="lazy" src="https://4menshop.com/images/thumbs/news/-602.jpg" alt="Banner sản phẩm mới" class="w-full h-full object-cover"/></div>
+      <div class="swiper-slide">
+        <img loading="lazy" th:src="@{/image/banner1.png}" alt="Banner thời trang nam" class="w-full h-full object-cover"/>
+      </div>
+      <div class="swiper-slide">
+        <img loading="lazy" th:src="@{/image/banner2.png}" alt="Banner khuyến mãi" class="w-full h-full object-cover"/>
+      </div>
+      <div class="swiper-slide">
+        <img loading="lazy" th:src="@{/image/banner3.png}" alt="Banner khuyến mãi" class="w-full h-full object-cover"/>
+      </div>
     </div>
     <div class="swiper-button-next text-blue-800"></div>
     <div class="swiper-button-prev text-blue-800"></div>
