thông tin khách hàng thanh-toan.html

--- a/src/main/resources/templates/WebKhachHang/index.html
+++ b/src/main/resources/templates/WebKhachHang/index.html
@@ -259,13 +259,13 @@
   <div class="swiper banner-slider">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <img loading="lazy" th:src="@{/image/banner1.png}" alt="Banner thời trang nam" class="w-full h-full object-cover"/>
+        <img loading="lazy" src="/image/banner1.png" alt="Banner thời trang nam" class="w-full h-full object-cover"/>
       </div>
       <div class="swiper-slide">
-        <img loading="lazy" th:src="@{/image/banner2.png}" alt="Banner khuyến mãi" class="w-full h-full object-cover"/>
+        <img loading="lazy" src="/image/banner2.png" alt="Banner khuyến mãi" class="w-full h-full object-cover"/>
       </div>
       <div class="swiper-slide">
-        <img loading="lazy" th:src="@{/image/banner3.png}" alt="Banner khuyến mãi" class="w-full h-full object-cover"/>
+        <img loading="lazy" src="/image/banner3.png" alt="Banner khuyến mãi" class="w-full h-full object-cover"/>
       </div>
     </div>
     <div class="swiper-button-next text-blue-800"></div>
