--- a/src/main/resources/templates/WebKhachHang/don-mua.html
+++ b/src/main/resources/templates/WebKhachHang/don-mua.html
@@ -600,6 +600,7 @@
                     <div class="product-details flex-1">
                         <h6 th:text="${chiTiet.tenSanPham}"></h6>
                         <div class="product-meta">
+
                             <span><i class="fas fa-cubes mr-1"></i>Số lượng: <strong th:text="${chiTiet.soLuong}"></strong></span>
                             <span class="ml-4"><i class="fas fa-tag mr-1"></i>Giá: <strong th:text="${chiTiet.formattedGia} + ' VNĐ'"></strong></span>
                         </div>
@@ -615,6 +616,17 @@
                 <a th:href="@{'/dsdon-mua/chi-tiet/' + ${hoaDon.id}}" class="btn btn-outline-primary">
                     <i class="fas fa-eye mr-2"></i>Xem chi tiết
                 </a>
+                <a th:if="${hoaDon.trangThai == 'Hoàn thành' and !hoaDon.daDanhGia}"
+                   th:href="@{'/dsdon-mua/danh-gia/' + ${hoaDon.id}}"
+                   class="btn btn-outline-primary">
+                    <i class="fas fa-star mr-2"></i>Đánh giá
+                </a>
+
+                <span th:if="${hoaDon.trangThai == 'Hoàn thành' and hoaDon.daDanhGia}"
+                      class="text-success font-semibold">
+                    <i class="fas fa-check mr-1"></i>Đã đánh giá
+                </span>
+
             </div>
         </div>
     </div>
